--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h6 {
 	padding-right: 0;
 	min-height: 50px;
 	line-height: 50px;
-	background: transparent;
+	background: linear-gradient(to left, #7a60ff, #cd9ffa);;
 	z-index: 1030;
 }
 .navbar .active {
@@ -601,3 +601,124 @@ h3 {
 	font-size: 10px;
 }
 }
+
+/* Add this CSS for the logo and logo-black */
+.navbar-logo {
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    max-width: 200px; /* Adjust the maximum width to your preference */
+    height: auto;
+}
+
+.logo-black {
+    display: none;
+    max-width: 100px; /* Adjust the maximum width for the black logo */
+    height: auto;
+}
+
+/* Add media queries for responsive logo size adjustments */
+@media (max-width: 768px) {
+    .navbar-logo {
+        justify-content: center;
+    }
+
+    .logo {
+        max-width: 70px; /* Adjust the logo size for smaller screens */
+    }
+
+    .logo-black {
+        display: block;
+    }
+}
+
+@media (max-width: 576px) {
+    .logo {
+        max-width: 50px; /* Further adjust the logo size for even smaller screens */
+    }
+}
+
+/* Add styles for the partner logo section */
+.partners {
+	background: #fafafa;
+  }
+  
+  .partner-logos {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+  }
+  
+  .partner-logo {
+	flex: 0 0 16.66667%;
+	max-width: 16.66667%;
+	text-align: center;
+	margin-bottom: 40px;
+  }
+  
+  .partner-logo img {
+	width: 100%;
+	height: auto;
+  }
+
+  
+  /* Add styles for the statistics section */
+.statistics {
+	background: #7a60ff;
+	background: linear-gradient(to left, #7a60ff, #cd9ffa);
+	padding: 100px 0px;
+	position: relative;
+  }
+  
+  .statistics::before {
+	content: "";
+	display: block;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background: url(images/pattern.png);
+  }
+  
+  .statistics h3 {
+	font-weight: 600;
+	font-size: 38px;
+  }
+  
+  .statistics p {
+	color: #fff;
+	font-size: 16px;
+  }
+  
+  .statistics-data {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 40px;
+  }
+  
+  .statistic {
+	flex: 0 0 33.33%; /* Set the width for each statistic block (3 blocks in a row) */
+	max-width: 33.33%;
+	text-align: center;
+	margin-bottom: 40px;
+	padding: 0 15px;
+  }
+  
+  .statistic h4 {
+	color: #fff;
+	font-size: 24px;
+	font-weight: 700;
+	margin-bottom: 10px;
+  }
+  
+  .statistic p {
+	color: #fff;
+	font-size: 18px;
+	font-weight: 600;
+  }
+  
